# Echidna

./: .gitignore  Cargo.toml  Makefile  Readme.md  build-app.sh  build.sh  clean.sh  make-app.sh
app_files/: AppIcon.icns  Info.plist  Readme.md  ShimAppIcon.icns  help.md  test_Info.plist  test_config.json5
echidna/: Cargo.toml
echidna-app/: Cargo.toml
echidna-app/app_files/: Info.plist
echidna-app/scripts/: make-app.sh
echidna-app/src/: main.rs
echidna-cli/: Cargo.toml
echidna-cli/src/: main.rs
echidna-helpers/: Cargo.toml
echidna-helpers/src/: config.rs
echidna-lib/: Cargo.toml  build.rs  build_log.txt
echidna-lib/src/: config.rs  lib.rs
echidna-shim/: Cargo.toml
echidna-shim/app_files/: test_Info.plist
echidna-shim/scripts/: build-test-shim.sh
echidna-shim/src/: main.rs
echidna-util/: Cargo.toml
echidna-util/src/: config.rs  lib.rs
echidna/app_files/: Info.plist
echidna/scripts/: make-app.sh
echidna/src/: main.rs
scripts/: build-test-shim.sh  clean-test-shim.sh  make-app.sh
src/: config.rs  lib.rs  main.rs  misc.rs
src/app/: app.rs  help.md
src/cli/: cli.rs
src/lib/: bundle_tmp_dir.rs  config.rs  generate.rs  lib.rs  misc.rs  term.rs
src/shim/: shim.rs
