[package]
name = "echidna"
version = "0.1.0"
edition = "2021"
description = "Double-click to open files in terminal apps"

[[bin]]
name = "echidna"
path = "src/app/app.rs"

[[bin]]
name = "echidna-cli"
path = "src/cli/cli.rs"

[[bin]]
name = "echidna-shim"
path = "src/shim/shim.rs"

[lib]
name = "echidna_lib"
path = "src/lib/lib.rs"


[dependencies]
better_default = "1.0.0"
eframe = { version = "0.27.2", features = ["persistence"] }
image = { version = "0.24" } # Version must be same as egui_extra's image version
opener = { version = "0.7.1", features = ["reveal"] }
rfd = "0.14.1"
cacao = "0.3.2"
home = "0.5.9"
log = "0.4.21"
simple-logging = "2.0.2"
url = "2.5.1"
shell-quote = "0.5.0"
serde = "1.0.203"
serde_json = "1.0.117"
handlebars = "5.1.2"
tempdir = "0.3.7"
libc = "0.2.155"
clap = { version = "4.5.7", features = ["derive"] }
lazy_static = "1.4.0"
egui_commonmark = { version = "0.16.1", features = ["macros"] }
indexmap = "2.2.6"
itertools = "0.13.0"
egui_extras = { version = "0.27.2", features = ["image", "all_loaders"] }
gethostname = "0.4.3"
rand = "0.8.5"

